--- a/public/styleSheet/views-styleSheets/status.css
+++ b/public/styleSheet/views-styleSheets/status.css
@@ -206,10 +206,11 @@ height: 100vh;
     width: 100%;
     height: 100vh;
     background-color: #f8f8f8;
-    position: fixed;
+    position: absolute;
     z-index: 3000;
     flex-direction: column;
     gap: 20px;
+    overflow-x: hidden;
 
 }
 
@@ -247,7 +248,6 @@ height: 100vh;
     display: flex;
     flex-direction: row;
     gap: 10px;
-    overflow-x: scroll;
     
 }
 .content-order-product{
