--- a/public/styleSheet/default-colors/colorDefault.css
+++ b/public/styleSheet/default-colors/colorDefault.css
@@ -5,7 +5,7 @@
     color: tomato;
 }
 .color-default-silver{
-    color: silver;
+    color: rgb(133, 133, 133);
 }
 .backgroundColor-white{
     color: white;
