bug do btnFechar resolvido

--- a/views/home.html
+++ b/views/home.html
@@ -95,10 +95,12 @@
         </div>
         <div class="container-user-order-info">
             <div class="content-user-info-row">
+                <a class="content-user-info" href="/views/orders.html">
                 <div class="content-user-info">
-                    <img width="40px" height="40px" src="/public/img/ico/icons8_order_history_48.png" alt="">
-                    <h6>Historico</h5>
-                </div>
+                        <img width="40px" height="40px" src="/public/img/ico/icons8_order_history_48.png" alt="">
+                        <h6 class="color-default-tomato">Historico</h5>
+                        </div>
+                    </a>
                 <div class="content-user-info">
 
                 </div>
