--- a/public/styleSheet/views-styleSheets/order.css
+++ b/public/styleSheet/views-styleSheets/order.css
@@ -1,3 +1,4 @@
+
 .container-main{
     height: 100vh;
     display: flex;
@@ -5,10 +6,10 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
-
+    overflow-y: scroll;
 }
 .container-header{
-    top: 100px;
+top: 40px;
 display: flex;
 flex-direction: column;
 position: absolute;
@@ -16,6 +17,7 @@ left: 50px;
 gap: 70px;
 }
 .btn-navigaor{
+
 }
 .container-controllers-list{
     display: flex;
@@ -101,7 +103,148 @@ gap: 70px;
 }
 #containerOrderInfo{
     display: flex;
-    position: absolute;
+    position: fixed;
     top: 0px;
     z-index: 100;
+    width: 100%;
+    overflow: hidden;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.content-info{
+    width: 100%;
+    gap: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center ;
+    align-items: center;
+}
+
+#containerOrderInfo{
+    display: none;
+    padding-bottom: 50px;
+    width: 100%;
+    height: 100vh;
+    background-color: #f8f8f8;
+    position: fixed;
+    z-index: 3000;
+    flex-direction: column;
+    gap: 20px;
+
+}
+
+.content-from-to2{
+    margin-top: 110px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.title{
+    color: silver;
+    margin-left: -230px;
+
+}
+.content-input2{
+    background-color: #f8f8f8;
+    margin-left: -150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.container-order-products{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.container-order-products-row{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    
+}
+.content-order-product{
+    width: 150px;
+    height: 100px;
+    border-radius: 15px;
+    background-color: white;
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+}
+.product-info{
+    width: 100%;
+    display: flex;
+}
+.product-sizes{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.container-deliver{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+.content-deliver{
+    display: flex;
+    border-radius: 15px;
+    width: 80%;
+    background-color: white;
+    gap: 20px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.orders{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.container-payment{
+width: 100%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 20px;
+}
+.content-total{
+    display: flex;
+    width: 85%;
+    border-radius: 15px;
+    height: 70px;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+.info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
