--- a/views/orders.html
+++ b/views/orders.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="/public/styleSheet/default-components/circle-button.css">
     <link rel="stylesheet" href="/public/styleSheet/default-components/radius-btn.css">
     <link rel="stylesheet" href="/public/styleSheet/default-components/control-button.css">
-    <link rel="stylesheet" href="/public/styleSheet/views-styleSheets/status.css">
     <link rel="stylesheet" href="/public/styleSheet/views-styleSheets/order.css">
 
 </head>
@@ -52,9 +51,11 @@
         </div>
     </div>
     <section id="containerOrderInfo">
-        <div class="btn-navigaor">
-            <button id="btnCloseOrderInfo" onclick="closeInfo()" class="navigatio-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button>
-            <button class="navigatio-button" id="btnGetUserLocation"><img src="/public/img/ico/icons8_location_update_32.png" alt=""></button>
+        <div class="container-header">
+            <div class="btn-navigaor">
+                <button id="btnCloseOrderInfo" onclick="closeInfo()" class="navigatio-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button>
+            </div>
+
         </div>
         <div class="content-from-to2">
             <h3 class="title">Pontos</h3>
