--- a/public/styleSheet/views-styleSheets/status.css
+++ b/public/styleSheet/views-styleSheets/status.css
@@ -317,3 +317,44 @@ gap: 20px;
     align-items: center;
 
 }
+#containerRateDeliver{
+
+    display: none;
+    background-color: rgba(0, 0, 0, 0.561);
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    z-index: 3000;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+.containerDeliver-rate{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 75%;
+    height: 40vh;
+    background-color: white;
+    padding: 25px;
+    border-radius: 30px;
+    box-shadow: 0px 6px 9px rgba(0,0,0,0.5);
+}
+.imgRate{
+    width: 43px;
+    height: 43px;
+}
+#containerPoupupLoader{
+    display: none;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.626);
+    z-index: 4000;
+
+}
