--- a/public/styleSheet/views-styleSheets/status.css
+++ b/public/styleSheet/views-styleSheets/status.css
@@ -317,3 +317,37 @@ gap: 20px;
     align-items: center;
 
 }
+
+#containerPoupupLoader{
+    display: none;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.626);
+    z-index: 4000;
+
+}
+.containerDeliverRate{
+    background-color: white;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 75%;
+    border-radius: 30px;
+    gap: 10px;
+}
+#containerRateDeliver{
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 3000;
+    background-color: rgba(0, 0, 0, 0.45);
+}
