faltando um layout

--- a/views/addCreditCard.html
+++ b/views/addCreditCard.html
@@ -25,16 +25,21 @@
                 <a href=""><button class="navigatio-button" id="buyButton"><img src="" alt=""></button></a>
             </div>
             <h4 class="color-default-silver">
-                Gerencie seus locais de entrega
+                Gerencie seus cartões de crédito
             </h3>
         </div>
         <div class="container-input">
             <div class="content-input">
-                <img src="/public/img/ico/icons8_Location_16.png" alt="">
-                <input placeholder="digite o endereço" class="input" type="text">
+                <input placeholder="nome do titular" class="input" type="text">
             </div>
             <div class="content-input">
-                <input placeholder="nome" class="input" type="text">
+                <input placeholder="Nº do cartão" class="input" type="text">
+            </div>
+            <div class="content-input">
+                <input placeholder="MM/AA" class="input" type="text">
+            </div>
+            <div class="content-input">
+                <input placeholder="CVV" class="input" type="text">
             </div>
         </div>
         <button style="background-color: tomato; color: white; height: 50px; box-shadow: 0px 0px 7px rgba(0,0,0,0.1);" id="btnCriar" class="radius-btn">Criar</button>
@@ -43,19 +48,31 @@
             <table >
                 <tr>
                     <td class="center"><input type="radio"></td>
-                    <td><span>Casa</span></td>
+                    <td><span>Pai</span></td>
                     <td class="center"><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_trash_can_32.png" alt=""></button></td>
                     <td><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_edit_32.png" alt=""></button></td>
                 </tr>
                 <tr>
                     <td class="center"><input type="radio"></td>
-                    <td><span>Escola</span></td>
+                    <td><span>Meu</span></td>
                     <td class="center"><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_trash_can_32.png" alt=""></button></td>
                     <td><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_edit_32.png" alt=""></button></td>
                 </tr>
                 <tr>
                     <td class="center"><input type="radio"></td>
-                    <td><span>escritorio</span></td>
+                    <td><span>empresa</span></td>
+                    <td class="center"><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_trash_can_32.png" alt=""></button></td>
+                    <td><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_edit_32.png" alt=""></button></td>
+                </tr>
+                <tr>
+                    <td class="center"><input type="radio"></td>
+                    <td><span>empresa</span></td>
+                    <td class="center"><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_trash_can_32.png" alt=""></button></td>
+                    <td><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_edit_32.png" alt=""></button></td>
+                </tr>
+                <tr>
+                    <td class="center"><input type="radio"></td>
+                    <td><span>empresa</span></td>
                     <td class="center"><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_trash_can_32.png" alt=""></button></td>
                     <td><button class="navigatio-button"><img class="imgData" src="/public/img/ico/icons8_edit_32.png" alt=""></button></td>
                 </tr>
