--- a/views/home.html
+++ b/views/home.html
@@ -129,12 +129,16 @@
                     <h6>Favoritos</h5>
                 </div>
                 <div class="content-mannager-info">
-                    <img src="/public/img/ico/icons8_place_marker_48.png" alt="">
-                    <h6>Locais de entrega</h5>
+                    <a href="/views/addLocalStart.html">
+                        <img src="/public/img/ico/icons8_place_marker_48.png" alt="">
+                        <h6>Locais de entrega</h5>
+                    </a>
                 </div>
                 <div class="content-mannager-info">
-                    <img src="/public/img/ico/icons8_card_exchange_48.png" alt="">
-                    <h6>Cartões de credito</h5>
+                    <a href="/views/addCreditCard.html">
+                        <img src="/public/img/ico/icons8_card_exchange_48.png" alt="">
+                        <h6>Cartões de credito</h5>
+                    </a>
                 </div>
             </div>
         </div>
