--- a/public/styleSheet/views-styleSheets/home.css
+++ b/public/styleSheet/views-styleSheets/home.css
@@ -6,6 +6,14 @@
 body{
     background-color: #f8f8f8;
 }
+a{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: tomato;
+
+}
 .container-main{
     padding-bottom: 20px;
     width: 100%;
